--- a/vignettes/reference.bib
+++ b/vignettes/reference.bib
@@ -14,3 +14,13 @@
 }
 
 
+@article{storey2003statistical,
+	title={Statistical significance for genomewide studies},
+	author={Storey, John D and Tibshirani, Robert},
+	journal={Proceedings of the National Academy of Sciences},
+	volume={100},
+	number={16},
+	pages={9440--9445},
+	year={2003},
+	publisher={National Acad Sciences}
+}
