--- a/inst/NEWS
+++ b/inst/NEWS
@@ -11,3 +11,7 @@ VERSION 1.1.1
 VERSION 1.1.2
 ----------------------
 + update NEWS file.
+
+VERSION 1.7.1
+----------------------
++ add reference.
