--- a/vignettes/SDAMS.Rnw
+++ b/vignettes/SDAMS.Rnw
@@ -65,9 +65,9 @@ constructed for differential abundant analysis.
 \section{Citation}
 The package {\tt SDAMS} implements statistical methods from the following
 publication. If you use {\tt SDAMS} in the published research, please cite: \\
-Yuntong Li, Teresa W.M. Fan, Andrew N. Lane, Woo-Young Kang, Susanne M. Arnold,
-Arnold J. Stromberg, Chi Wang and Li Chen: A Two-Part Semi-Parametric Model for
-Metabolomics and Proteomics Data. (Manuscript)
+Li, Y., Fan, T.W., Lane, A.N. et al. SDA: a semi-parametric differential 
+abundance analysis method for metabolomics and proteomics data. 
+BMC Bioinformatics 20, 501 (2019). 
 
 \section{Quick Start}
 This section show the most basic {\tt SDAMS} work flow for a differential
