--- a/inst/NEWS
+++ b/inst/NEWS
@@ -15,3 +15,7 @@ VERSION 1.1.2
 VERSION 1.7.1
 ----------------------
 + add reference.
+
+VERSION 1.8.1
+----------------------
++ add example for single-cell data
