--- a/vignettes/reference.bib
+++ b/vignettes/reference.bib
@@ -24,3 +24,14 @@
 	year={2003},
 	publisher={National Acad Sciences}
 }
+
+@article{islam2011characterization,
+	title={Characterization of the single-cell transcriptional landscape by highly multiplex RNA-seq},
+	author={Islam, Saiful and Kj{\"a}llquist, Una and Moliner, Annalena and Zajac, Pawel and Fan, Jian-Bing and L{\"o}nnerberg, Peter and Linnarsson, Sten},
+	journal={Genome research},
+	volume={21},
+	number={7},
+	pages={1160--1167},
+	year={2011},
+	publisher={Cold Spring Harbor Lab}
+}
